BradkenProduction/force-app/main/default/objects/User_Story__c/fields/As_a__c.field-meta.xml
<CustomField>
    <fullName>As_a__c</fullName>
    <label>As a...</label>
    <length>50</length>
    <type>Text</type>
</CustomField>