BradkenProduction/force-app/main/default/objects/User_Story__c/fields/Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Assumptions__c</fullName>
    <label>Assumptions</label>
    <type>TextArea</type>
</CustomField>