BradkenProduction/force-app/main/default/objects/User_Story__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we awaiting input from the client in order to complete this user story?</inlineHelpText>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>