BradkenProduction/force-app/main/default/objects/User_Story__c/fields/Blocked_Date__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Date__c</fullName>
    <label>Blocked Date</label>
    <type>Date</type>
</CustomField>