BradkenProduction/force-app/main/default/objects/User_Story__c/fields/I_Want_to__c.field-meta.xml
<CustomField>
    <fullName>I_Want_to__c</fullName>
    <label>I Want to...</label>
    <type>TextArea</type>
</CustomField>