BradkenProduction/force-app/main/default/objects/User_Story__c/fields/Percentage_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Completed__c</fullName>
    <description>Percentage of user story completed. Updated to 100% once ready for UAT</description>
    <inlineHelpText>Percentage of user story completed. Updated to 100% once ready for UAT</inlineHelpText>
    <label>Percentage Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>