BradkenProduction/force-app/main/default/objects/User_Story__c/fields/Points_Completed__c.field-meta.xml
<CustomField>
    <fullName>Points_Completed__c</fullName>
    <formula>VALUE(TEXT( Points_Effort__c )) * Percentage_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>