BradkenProduction/force-app/main/default/objects/User_Story__c/fields/Points_Effort__c.field-meta.xml
<CustomField>
    <fullName>Points_Effort__c</fullName>
    <inlineHelpText>Consider that effort includes configuration/development, testing and deployment.</inlineHelpText>
    <label>Points (Effort)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>