BradkenProduction/force-app/main/default/objects/User_Story__c/fields/Points_Effort_Number__c.field-meta.xml
<CustomField>
    <fullName>Points_Effort_Number__c</fullName>
    <formula>VALUE(TEXT(Points_Effort__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points (Effort)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>