BradkenProduction/force-app/main/default/objects/User_Story__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Story Created</fullName>
                <default>true</default>
                <label>User Story Created</label>
            </value>
            <value>
                <fullName>User Story Confirmed</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>System Testing</fullName>
            </value>
            <value>
                <fullName>UAT Testing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>