BradkenProduction/force-app/main/default/objects/User_Story__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>What is the value to the client?</inlineHelpText>
    <label>Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nice to Have</fullName>
            </value>
            <value>
                <fullName>Could Have</fullName>
            </value>
            <value>
                <fullName>Should Have</fullName>
            </value>
            <value>
                <fullName>Must Have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>