BradkenProduction/force-app/main/default/objects/User_Story__c/listViews/All_Blocked_User_Stories.listView-meta.xml
<ListView>
    <fullName>All_Blocked_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>Sprint__c</columns>
    <columns>Epic__c</columns>
    <columns>Status__c</columns>
    <columns>I_Want_to__c</columns>
    <columns>Blocked_Date__c</columns>
    <columns>Blocked_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Blocked__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Blocked User Stories</label>
</ListView>