BradkenProduction/force-app/main/default/objects/User_Story__c/listViews/Sprint_3_User_Story_Table.listView-meta.xml
<ListView>
    <fullName>Sprint_3_User_Story_Table</fullName>
    <columns>NAME</columns>
    <columns>Sprint__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>Sprint 3</value>
    </filters>
    <label>Sprint 3 User Story - Table</label>
</ListView>